img source & connection class modified